# rollthelore

./: .travis.yml  Makefile  README.md  pyproject.toml  rollnpc.py
data/: npc.yaml
loreroll/: npc.py
loreroll/data/: npc.json  npc.yaml
tests/: test_rollnpc.py
tests/loreroll/: test_npc.py
