[tool.poetry]
name = "rollthelore"
version = "0.3.2"
description = "An unseen servant providing an advantage to DMs/GMs while creating their worlds."
homepage = "https://github.com/geckon/rollthelore"
readme="README.md"
authors = ["Tomáš Heger"]
packages = [
    { include = "loreroll" },
    { include = "rollnpc.py" }
]

[tool.poetry.dependencies]
python = "^3.7"
strictyaml = "^1.7.3"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
bandit = "^1.7.1"
pylint = "^2.12.0"
pycodestyle = "^2.10.0"
pytest = "^7.4.1"

[tool.poetry.scripts]
rollnpc = 'rollnpc:generate'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
