[tool.poetry]
name = "rollthelore"
version = "0.3.2"
description = "An unseen servant providing an advantage to DMs/GMs while creating their worlds."
homepage = "https://github.com/geckon/rollthelore"
readme="README.md"
authors = ["Tomáš Heger"]
packages = [
    { include = "loreroll" },
    { include = "rollnpc.py" }
]

[tool.poetry.dependencies]
python = "^3.11"
strictyaml = "^1.7.3"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
bandit = "^1.9.2"
pylint = "^4.0.3"
pycodestyle = "^2.14.0"
pytest = "^9.0.1"

[tool.poetry.scripts]
rollnpc = 'rollnpc:generate'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
